# agentic-swmm-workflow

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CONTEXT.md  Dockerfile  Dockerfile.anywhere  LICENSE  README.md  defaults_table.yaml  package-lock.json  pyproject.toml  setup.py
.claude/prds/: PRD_llm_driven_dispatch.md  PRD_review_findings_2026-05-14.md
.github/workflows/: ci.yml  docker-anywhere.yml  docker.yml  publish-pypi.yml  release-assets.yml  sync-installers-to-website.yml  windows-smoke.yml
agent/config/: intent_map.json
agent/memory/: README.md  evidence_memory.md  identification_memory.md  modeling_workflow_memory.md  operational_memory.md  soul.md  user_bridge_memory.md
agentic-ai/config/: intent_map.json
agentic-ai/memory/: README.md  evidence_memory.md  identification_memory.md  operational_memory.md  soul.md  user_bridge_memory.md
agentic_swmm/: __init__.py  cli.py  config.py
agentic_swmm/agent/: __init__.py  calibration_batch.py  continuation_classifier.py  digest_render.py  error_boundary.py  error_remediation.py  executor.py  experimental_providers.py  feature_flags.py  flag_naming.py  gap_fill_runtime.py  help_router.py  hitl_surface.py  honesty.py  intent_classifier.py  intent_disambiguator.py  intent_map.py  mcp_cache.py  mcp_client.py  mcp_coverage.py  mcp_pool.py  memory_context.py  memory_informed_policy.py  memory_trace.py  memory_verbs.py  onboarding.py  permissions.py  permissions_profile.py  planner.py  planner_introspection.py  policy.py  prompts.py  provider_preflight.py  repl.py  reporting.py  runtime.py  runtime_loop.py  session_bootstrap.py  session_header.py  session_history.py  (+10 more)
agentic_swmm/audit/: __init__.py  chat_note.py  llm_calls.py  moc_generator.py  provenance_v1_2.py  run_folder_layout.py
agentic_swmm/case/: __init__.py  case_defaults.py  case_id.py  case_registry.py
agentic_swmm/commands/: __init__.py  agent.py  audit.py  bootstrap_memory.py  calibrate.py  capabilities.py  chat.py  cite.py  cite_param.py  compare.py  config.py  demo.py  doctor.py  doctor_extension.py  login.py  map.py  mcp.py  memory.py  memory_archive_cmd.py  memory_health.py  model.py  plot.py  report.py  review.py  run.py  runs_tidy.py  setup.py  skill.py  storm.py  trace.py  transfer.py  uncertainty.py
agentic_swmm/diagnostics/: __init__.py  doctor_report.py  fixes.py
agentic_swmm/gap_fill/: __init__.py  llm_enumerator.py  preflight.py  proposer.py  protocol.py  recorder.py  ui.py  ui_per_gap.py
agentic_swmm/hitl/: __init__.py  decision_recorder.py  request_expert_review.py  threshold_evaluator.py
agentic_swmm/integrations/: __init__.py  inp_source.py  raw_snapshot.py  swmmanywhere_runner.py  swmmcanada_runner.py
agentic_swmm/memory/: __init__.py  audit_hook.py  audit_to_memory.py  benchmark_resolver.py  calibration_memory.py  card.py  case_adaptive_thresholds.py  case_inference.py  citations.py  context_budget.py  context_fence.py  cross_watershed_transfer.py  facts.py  health_tiers.py  jsonl_store.py  lessons_lifecycle.py  lessons_metadata.py  memory_archive.py  memory_outcomes.py  memory_provenance.py  moc_generator.py  negative_lessons.py  negative_lessons_markdown.py  parametric_memory.py  parametric_memory_index.py  proposal_skeleton.py  recall.py  recall_search.py  reference_benchmarks.py  run_failures.py  run_progress.py  session_db.py  session_repair.py  session_sync.py  storm_library.py  user_baseline.py  version_compat.py  watershed_similarity.py
agentic_swmm/providers/: __init__.py  _http.py  anthropic_api.py  (+4 more)
docs/: agent-nl-swmm-evidence-20260514.md  agent-nl-swmm-gpt55-evidence-20260515.md  agent-nl-swmm-gpt55-llm-engaged-evidence-20260515.md  agent-nl-swmm-gpt55-plot-evidence-20260515.md  agentic-runtime-ux-prd.md  api-key-configuration.md  byte-identical-reproducibility.md  codex-runtime.md  experiment-audit-framework.md  hitl-thresholds.md  installation.md  llm_providers.md  memory_runtime.md  memory_runtime_cli.md  modeling-memory-and-skill-evolution.md  obsidian-compatible-rag-memory.md  openclaw-execution-path.md  qgis-final-layers-mcp.md  repo-map.md  runtime-install-options.md  swmm-anywhere-case-study.md  swmm-anywhere-quickstart.md  v0.7.1-cross-session-memory-evidence.md  v0.7.1-swmmanywhere-nl-driven-evidence.md  validation-evidence.md
integrations/: README.md
runs/: README.md
scripts/: _install_helpers.bash  _install_test_harness.bash  archive_zombies.py  backfill_sessions.py  bootstrap.ps1  bootstrap.sh  check_package_boundary.py  docker-bootstrap.sh  docker_entrypoint.sh  generate_mcp_configs.mjs  install.ps1  install.sh  install_codex_skills.mjs  install_mcp_deps.sh  migrate_audit_layout.py  requirements.txt  run_mcp_server.mjs  smoke_mcp_servers.mjs
tests/: conftest.py  test_agent_cli_quick_alias_warns.py  test_agent_cli_safe_flag.py  test_agentic_swmm_cli.py  test_anthropic_full_history.py  test_assign_subcatchment_outlets.py  test_audit_chat_note.py  test_audit_hook_calibration_memory.py  test_audit_hook_decay_pass.py  test_audit_hook_memory_trace.py  test_audit_hook_negative_lessons.py  test_audit_hook_negative_lessons_md.py  test_audit_hook_parametric_memory.py  test_audit_hook_phase_pipeline.py  test_audit_moc_generator.py  test_audit_note_human_decisions_section.py  test_audit_provenance_v1_2.py  test_audit_rpt_warnings.py  test_audit_run_folder_layout.py  test_audit_run_obsidian_default.py  test_audit_run_results_section.py  test_audit_run_schema_v1_1.py  test_audit_run_source_decomposition_hook.py  test_audit_runner_manifest_dedup.py  test_audit_threshold_hits_integration.py  test_audit_wq_note.py  test_banner_shows_profile.py  test_basin_shp_to_subcatchments.py  test_benchmark_resolver.py  test_bootstrap_memory.py  test_build_memory_corpus_hygiene.py  test_build_swmm_inp.py  test_calibrate_cli.py  test_calibrate_cli_e2e_smoke.py  test_calibrate_dream_zs_smoke.py  test_calibrate_real_engine.py  test_calibrate_sceua_smoke.py  test_calibrate_summary_honesty.py  test_calibration_accept_e2e.py  test_calibration_accept_tamper_detection.py  (+415 more)
web/: README.md  install.ps1  install.sh
(+364 files in other folders)
