[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "aiswmm"
version = "0.7.6"
description = "Unified CLI for reproducible and auditable Agentic SWMM workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Zhonghao Zhang" },
  { name = "Caterina Valeo" },
]
keywords = ["swmm", "stormwater", "hydrology", "agentic-ai", "reproducible-workflows"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Hydrology",
]
dependencies = [
  "matplotlib",
  "numpy",
  "PyYAML",
  "SALib",
  "spotpy",
  "swmmtoolbox",
  # Both LLM providers (openai default + anthropic opt-in) are pure-stdlib
  # urllib clients, so no LLM SDK ships in core dependencies.
]

[project.optional-dependencies]
# `swmm-anywhere` skill: synthesise a plausible SWMM model from a bbox
# (OSM streets + DEM) via SWMManywhere — © Imperial College London,
# BSD-3-Clause, https://github.com/ImperialCollegeLondon/SWMManywhere.
# Upstream paper / DOI / authorship attribution: see SKILL.md.
# OPTIONAL — pulls in ~27 heavy geo dependencies (geopandas, osmnx,
# rasterio, pyflwdir, pywbt, …). Install with: pip install aiswmm[anywhere]
anywhere = ["swmmanywhere>=0.2.2,<0.3"]

# `swmm-report` skill: generate a Word deliverable from an audited run.
# Pure-Python; no system binary required.
# Install with: pip install aiswmm[report]
report = ["python-docx>=1.1"]

# `swmm-gis` skill: shapefile/raster preprocessing into SWMM subcatchments.
# Heavy geospatial stack, kept optional so the core install stays light.
# Install with: pip install aiswmm[gis]
gis = ["geopandas", "rasterio", "shapely", "pyshp", "pysheds", "pyogrio"]

[project.urls]
Homepage = "https://github.com/Zhonghao1995/agentic-swmm-workflow"
Repository = "https://github.com/Zhonghao1995/agentic-swmm-workflow"
Documentation = "https://github.com/Zhonghao1995/agentic-swmm-workflow#readme"
Issues = "https://github.com/Zhonghao1995/agentic-swmm-workflow/issues"
Changelog = "https://github.com/Zhonghao1995/agentic-swmm-workflow/blob/main/CHANGELOG.md"

[project.scripts]
aiswmm = "agentic_swmm.cli:main"
agentic-swmm = "agentic_swmm.cli:main"

[tool.setuptools.packages.find]
include = ["agentic_swmm*"]
